--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,7 @@
 channels:
   - conda-forge
 dependencies:
-  - lumispy
-  - hyperspy-base
-  - hyperspy-gui-ipywidgets
+  - lumispy>=0.2
+  - hyperspy-base>=1.7.0
+  - hyperspy-gui-ipywidgets>1.5.0
   - ipympl
