--- a/environment.yml
+++ b/environment.yml
@@ -3,5 +3,5 @@ channels:
 dependencies:
   - lumispy>=0.2
   - hyperspy-base>=1.7.0
-  - hyperspy-gui-ipywidgets>1.5.0
+  - hyperspy-gui-ipywidgets>=1.5.0
   - ipympl
