--- a/environment.yml
+++ b/environment.yml
@@ -1,177 +1,9 @@
-name: clebic_nb
 channels:
   - conda-forge
 dependencies:
-  - _libavif_api=1.2.1=h57928b3_2
-  - _openmp_mutex=4.5=2_gnu
-  - aom=3.9.1=he0c23c2_0
-  - asttokens=3.0.0=pyhd8ed1ab_1
-  - blosc=1.21.6=hfd34d9b_1
-  - brotli=1.1.0=h2466b09_2
-  - brotli-bin=1.1.0=h2466b09_2
-  - brotli-python=1.1.0=py313h5813708_2
-  - bzip2=1.0.8=h2466b09_7
-  - c-blosc2=2.15.2=h9e57077_1
-  - ca-certificates=2025.1.31=h56e8100_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - certifi=2025.1.31=pyhd8ed1ab_0
-  - cffi=1.17.1=py313ha7868ed_0
-  - charls=2.4.2=h1537add_0
-  - charset-normalizer=3.4.1=pyhd8ed1ab_0
-  - click=8.1.8=pyh7428d3b_0
-  - cloudpickle=3.1.1=pyhd8ed1ab_0
-  - colorama=0.4.6=pyhd8ed1ab_1
-  - comm=0.2.2=pyhd8ed1ab_1
-  - contourpy=1.3.2=py313h1ec8472_0
-  - cycler=0.12.1=pyhd8ed1ab_1
-  - dask-core=2025.3.0=pyhd8ed1ab_0
-  - dav1d=1.2.1=hcfcfb64_0
-  - decorator=5.2.1=pyhd8ed1ab_0
-  - exceptiongroup=1.2.2=pyhd8ed1ab_1
-  - executing=2.1.0=pyhd8ed1ab_1
-  - flexcache=0.3=pyhd8ed1ab_1
-  - flexparser=0.4=pyhd8ed1ab_1
-  - fonttools=4.57.0=py313hb4c8b1a_0
-  - freetype=2.13.3=h0b5ce68_0
-  - fsspec=2025.3.2=pyhd8ed1ab_0
-  - giflib=5.2.2=h64bf75a_0
-  - h2=4.2.0=pyhd8ed1ab_0
-  - h5py=3.13.0=nompi_py313h717f7f6_100
-  - hdf5=1.14.3=nompi_hb2c4d47_109
-  - hpack=4.1.0=pyhd8ed1ab_0
-  - hyperframe=6.1.0=pyhd8ed1ab_0
-  - hyperspy-base=2.3.0=pyhd8ed1ab_2
-  - hyperspy-gui-ipywidgets=2.1.0=pyhd8ed1ab_0
-  - idna=3.10=pyhd8ed1ab_1
-  - imagecodecs=2024.12.30=py313h152d89a_0
-  - imageio=2.37.0=pyhfb79c49_0
-  - importlib-metadata=8.6.1=pyha770c72_0
-  - intel-openmp=2024.2.1=h57928b3_1083
-  - ipympl=0.9.7=pyhd8ed1ab_1
-  - ipython=9.1.0=pyhca29cf9_0
-  - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
-  - ipywidgets=8.1.6=pyhd8ed1ab_0
-  - jedi=0.19.2=pyhd8ed1ab_1
-  - jinja2=3.1.6=pyhd8ed1ab_0
-  - jupyterlab_widgets=3.0.14=pyhd8ed1ab_0
-  - jxrlib=1.1=hcfcfb64_3
-  - kiwisolver=1.4.7=py313h1ec8472_0
-  - krb5=1.21.3=hdf4eb48_0
-  - lazy-loader=0.4=pyhd8ed1ab_2
-  - lazy_loader=0.4=pyhd8ed1ab_2
-  - lcms2=2.17=hbcf6048_0
-  - lerc=4.0.0=h63175ca_0
-  - libaec=1.1.3=h63175ca_0
-  - libavif16=1.2.1=hb57027a_2
-  - libblas=3.9.0=31_h641d27c_mkl
-  - libbrotlicommon=1.1.0=h2466b09_2
-  - libbrotlidec=1.1.0=h2466b09_2
-  - libbrotlienc=1.1.0=h2466b09_2
-  - libcblas=3.9.0=31_h5e41251_mkl
-  - libcurl=8.13.0=h88aaa65_0
-  - libdeflate=1.23=h9062f6e_0
-  - libexpat=2.7.0=he0c23c2_0
-  - libffi=3.4.6=h537db12_1
-  - libgcc=14.2.0=h1383e82_2
-  - libgomp=14.2.0=h1383e82_2
-  - libhwloc=2.11.2=default_ha69328c_1001
-  - libhwy=1.1.0=h91493d7_0
-  - libiconv=1.18=h135ad9c_1
-  - libjpeg-turbo=3.0.0=hcfcfb64_1
-  - libjxl=0.11.1=h456c5fc_0
-  - liblapack=3.9.0=31_h1aa476e_mkl
-  - liblzma=5.8.1=h2466b09_0
-  - libmpdec=4.0.0=h2466b09_0
-  - libpng=1.6.47=had7236b_0
-  - libsqlite=3.49.1=h67fdade_2
-  - libssh2=1.11.1=he619c9f_0
-  - libtiff=4.7.0=h797046b_3
-  - libwebp-base=1.5.0=h3b0e114_0
-  - libwinpthread=12.0.0.r4.gg4f2fc60ca=h57928b3_9
-  - libxcb=1.17.0=h0e4246c_0
-  - libxml2=2.13.7=h442d1da_1
-  - libzlib=1.3.1=h2466b09_2
-  - libzopfli=1.0.3=h0e60522_0
-  - link-traits=1.0.3=pyhd8ed1ab_4
-  - llvmlite=0.44.0=py313hb80970b_1
-  - locket=1.0.0=pyhd8ed1ab_0
-  - lumispy=0.3.0=pyhd8ed1ab_1
-  - lz4-c=1.10.0=h2466b09_1
-  - markupsafe=3.0.2=py313hb4c8b1a_1
-  - matplotlib-base=3.10.1=py313h81b4f16_0
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
-  - mkl=2024.2.2=h66d3029_15
-  - mpmath=1.3.0=pyhd8ed1ab_1
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - natsort=8.4.0=pyh29332c3_1
-  - networkx=3.4.2=pyh267e887_2
-  - numba=0.61.2=py313h4ca4f0f_0
-  - numexpr=2.10.2=mkl_py313hda4395b_0
-  - numpy=2.2.4=py313hefb8edb_0
-  - openjpeg=2.5.3=h4d64b90_0
-  - openssl=3.5.0=ha4e3fda_0
-  - packaging=24.2=pyhd8ed1ab_2
-  - parso=0.8.4=pyhd8ed1ab_1
-  - partd=1.4.2=pyhd8ed1ab_0
-  - pickleshare=0.7.5=pyhd8ed1ab_1004
-  - pillow=11.1.0=py313hda88b71_0
-  - pint=0.24.4=pyhd8ed1ab_1
-  - pip=25.0.1=pyh145f28c_0
-  - platformdirs=4.3.7=pyh29332c3_0
-  - pooch=1.8.2=pyhd8ed1ab_1
-  - prettytable=3.16.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.51=pyha770c72_0
-  - pthread-stubs=0.4=h0e40799_1002
-  - pure_eval=0.2.3=pyhd8ed1ab_1
-  - pycparser=2.22=pyh29332c3_1
-  - pygments=2.19.1=pyhd8ed1ab_0
-  - pyparsing=3.2.3=pyhd8ed1ab_1
-  - pysocks=1.7.1=pyh09c184e_7
-  - python=3.13.3=h261c0b1_101_cp313
-  - python-box=7.3.2=py313ha7868ed_0
-  - python-dateutil=2.9.0.post0=pyhff2d567_1
-  - python_abi=3.13=6_cp313
-  - pywavelets=1.8.0=py313h8e081ca_0
-  - pyyaml=6.0.2=py313hb4c8b1a_2
-  - qhull=2020.2=hc790b64_5
-  - rav1e=0.6.6=h975169c_2
-  - requests=2.32.3=pyhd8ed1ab_1
-  - rosettasciio-base=0.8.0=py313ha7868ed_1
-  - ruamel.yaml=0.18.10=py313ha7868ed_0
-  - ruamel.yaml.clib=0.2.8=py313ha7868ed_1
-  - scikit-image=0.25.2=py313hf91d08e_0
-  - scipy=1.15.2=py313h2eca4b9_0
-  - six=1.17.0=pyhd8ed1ab_0
-  - snappy=1.2.1=h500f7fa_1
-  - stack_data=0.6.3=pyhd8ed1ab_1
-  - svt-av1=3.0.2=he0c23c2_0
-  - sympy=1.13.3=pyh04b8f61_5
-  - tbb=2021.13.0=h62715c5_1
-  - tifffile=2025.3.30=pyhd8ed1ab_0
-  - tk=8.6.13=h5226925_1
-  - toml=0.10.2=pyhd8ed1ab_1
-  - toolz=1.0.0=pyhd8ed1ab_1
-  - tqdm=4.67.1=pyhd8ed1ab_1
-  - traitlets=5.14.3=pyhd8ed1ab_1
-  - traits=7.0.2=py313ha7868ed_0
-  - typing-extensions=4.13.2=h0e9735f_0
-  - typing_extensions=4.13.2=pyh29332c3_0
-  - tzdata=2025b=h78e105d_0
-  - ucrt=10.0.22621.0=h57928b3_1
-  - urllib3=2.4.0=pyhd8ed1ab_0
-  - vc=14.3=h2b53caa_26
-  - vc14_runtime=14.42.34438=hfd919c2_26
-  - vs2015_runtime=14.42.34438=h7142326_26
-  - wcwidth=0.2.13=pyhd8ed1ab_1
-  - widgetsnbextension=4.0.14=pyhd8ed1ab_0
-  - win_inet_pton=1.1.0=pyh7428d3b_8
-  - xorg-libxau=1.0.12=h0e40799_0
-  - xorg-libxdmcp=1.1.5=h0e40799_0
-  - yaml=0.2.5=h8ffe710_2
-  - zfp=1.0.1=he0c23c2_2
-  - zipp=3.21.0=pyhd8ed1ab_1
-  - zlib-ng=2.2.4=hbb528cf_0
-  - zstandard=0.23.0=py313ha7868ed_1
-  - zstd=1.5.7=hbeecb71_2
-prefix: C:\Users\campbell\miniforge3\envs\clebic_nb
+  - lumispy>=0.2.2
+  - hyperspy-base>=1.7.4
+  - hyperspy-gui-ipywidgets>=1.5.0
+  - ipympl
+  - numba
+  - numexpr
